# SubTrimmer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-docker.yml
src/subtrimmer/: __init__.py  config.py  geoip.py  trimmer.py  util.py
